// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test bash on initial simple command input 1`] = `
{
  "commandText": "zsh",
  "cursorTerminated": true,
  "hasOutput": false,
  "hasPromptText": true,
  "suggestionsText": "",
}
`;

exports[`test cmd on initial simple command input 1`] = `
{
  "commandText": "dir",
  "cursorTerminated": true,
  "hasOutput": false,
  "hasPromptText": true,
  "suggestionsText": "",
}
`;

exports[`test cmd on initial simple command input with cursor movement backward 1`] = `
{
  "commandText": "dir",
  "cursorTerminated": false,
  "hasOutput": false,
  "hasPromptText": true,
  "suggestionsText": "",
}
`;

exports[`test cmd on multi line command input 1`] = `
{
  "commandText": "cmd",
  "cursorTerminated": true,
  "hasOutput": false,
  "hasPromptText": true,
  "suggestionsText": "",
}
`;

exports[`test fish on suggestion detection 1`] = `
{
  "commandText": "l",
  "cursorTerminated": true,
  "hasOutput": false,
  "hasPromptText": true,
  "suggestionsText": "s -la",
}
`;

exports[`test powershell on multi line command input 1`] = `
{
  "commandText": "cmd",
  "cursorTerminated": true,
  "hasOutput": false,
  "hasPromptText": true,
  "suggestionsText": "",
}
`;

exports[`test pwsh on command detection after failure 1`] = `
{
  "commandText": "zsh",
  "cursorTerminated": true,
  "hasOutput": false,
  "hasPromptText": true,
  "suggestionsText": "",
}
`;

exports[`test pwsh on suggestion detection 1`] = `
{
  "commandText": "ls",
  "cursorTerminated": true,
  "hasOutput": false,
  "hasPromptText": true,
  "suggestionsText": "-Force",
}
`;

exports[`test zsh on initial simple command input 1`] = `
{
  "commandText": "zsh",
  "cursorTerminated": true,
  "hasOutput": false,
  "hasPromptText": true,
  "suggestionsText": "",
}
`;

exports[`test zsh on suggestion detection 1`] = `
{
  "commandText": "l",
  "cursorTerminated": true,
  "hasOutput": false,
  "hasPromptText": true,
  "suggestionsText": "s -la",
}
`;
